@@ -106,7 +106,7 @@ public class BoundAction extends AbstractActionExt {
 
                 // May throw a security exception in an Applet
                 // context.
-                Object obj = clz.newInstance();
+                Object obj = clz.getDeclaredConstructor().newInstance();
 
                 registerCallback(obj, elems[1]);
             } catch (Exception ex) {
@@ -160,6 +160,7 @@ public class BoundAction extends AbstractActionExt {
                                           new Object[] { Boolean.TRUE });
         }
 
+        @Override
         public void itemStateChanged(ItemEvent evt) {
             Statement statement = (evt.getStateChange() == ItemEvent.DESELECTED) ? falseStatement
                     : trueStatement;
@@ -231,6 +232,7 @@ public class BoundAction extends AbstractActionExt {
     /**
      * Callback for command actions.
      */
+    @Override
     public void actionPerformed(ActionEvent evt) {
         ActionListener[] alist = getActionListeners();
         if (alist != null) {
